@@ -53,6 +53,17 @@
 ## authentication after installation.
 # featureSshd: true
 
+## Ask the user, which filesystem to use.
+# featureFsType: false
+## Filesystems that the user can choose from.
+#fsModel:
+#        - ext4
+#        - f2fs
+#        - btrfs
+## Default filesystem to display in the dialog. If featureFsType is disabled,
+## this gets used without asking the user.
+# defaultFs: ext4
+
 #######
 ### Commands running in the installer OS
 #######
@@ -69,7 +80,13 @@
 
 ## Format the rootfs with a file system
 ## Arguments: <device>
-# cmdMkfsRoot: "mkfs.ext4 -L 'unknownOS_root'"
+## Btrfs: to allow snapshots to work on the root subvolume, it is recommended that this
+## command be a script which will create a subvolume and make it default
+## An example can be found at:
+## https://gitlab.com/mobian1/calamares-settings-mobian/-/merge_requests/2/diffs#diff-content-dde34f5f1c89e3dea63608c553bbc452dedf428f
+# cmdMkfsRootBtrfs: "mkfs.btrfs -L 'unknownOS_root'"
+# cmdMkfsRootExt4: "mkfs.ext4 -L 'unknownOS_root'"
+# cmdMkfsRootF2fs: "mkfs.f2fs -l 'unknownOS_root'"
 
 ## Mount the partition after formatting with file system
 ## Arguments: <device> <mountpoint>
